--- a/index.html
+++ b/index.html
@@ -1,1 +1,167 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>teenie black hole</title>
+    <style>
+        #myCanvas {
+            position: fixed;
+            top: 0;
+            left: 0;
+        }
+    </style>
+</head>
+<body>
+    <canvas id="myCanvas"></canvas>
+    <script>
+        const canvas = document.getElementById('myCanvas');
+        const ctx = canvas.getContext('2d');
+        let stars = [];
+        let asteroids = [];
+        const bh_radius = 50;  // Black hole radius
+        const k = 1000;        // Gravitational constant for asteroid motion
+        let time = 0;
+
+        // Generate irregular asteroid shape
+        function generateAsteroidShape(numPoints, minRadius, maxRadius) {
+            let points = [];
+            for (let i = 0; i < numPoints; i++) {
+                let angle = (i / numPoints) * 2 * Math.PI;
+                let radius = minRadius + Math.random() * (maxRadius - minRadius);
+                points.push({
+                    x: radius * Math.cos(angle),
+                    y: radius * Math.sin(angle)
+                });
+            }
+            return points;
+        }
+
+        // Resize canvas and initialize stars
+        function resizeCanvas() {
+            canvas.width = window.innerWidth;
+            canvas.height = window.innerHeight;
+            stars = [];
+            for (let i = 0; i < 100; i++) {
+                stars.push({
+                    x: Math.random() * canvas.width,
+                    y: Math.random() * canvas.height,
+                    phase: Math.random() * 2 * Math.PI,
+                    frequency: 0.01 + Math.random() * 0.02
+                });
+            }
+        }
+
+        window.addEventListener('resize', resizeCanvas);
+        resizeCanvas();
+
+        // Animation loop
+        function animate() {
+            time += 0.01;
+            //?? EDIT HERE
+            // const cx = canvas.width / 2;
+            // const cy = canvas.height / 2;
+            const cx = canvas.width / 2;
+            const cy = canvas.height / 2;
+            const end_radius = Math.max(canvas.width, canvas.height) / 8;
+
+            // Accretion disk gradient
+            let gradient = ctx.createRadialGradient(cx, cy, 0, cx, cy, end_radius);
+            gradient.addColorStop(0, '#000');
+            gradient.addColorStop(0.35, '#000');
+            gradient.addColorStop(0.45, '#733000');
+            gradient.addColorStop(0.75, '#000');
+            gradient.addColorStop(1, '#000');
+            ctx.fillStyle = gradient;
+            ctx.fillRect(0, 0, canvas.width, canvas.height);
+
+            // Black hole
+            ctx.fillStyle = 'black';
+            ctx.beginPath();
+            ctx.arc(cx, cy, bh_radius, 0, 2 * Math.PI);
+            ctx.fill();
+
+            // Blurred photon sphere
+            // ctx.strokeStyle = 'white';
+            // ctx.lineWidth = 2;
+            // for (let i = -5; i <= 5; i++) {
+            //     let r = 1.5 * bh_radius + i * 2;
+            //     let alpha = 0.2 * Math.exp(-(i * i) / 4); // Gaussian blur effect
+            //     ctx.globalAlpha = alpha;
+            //     ctx.beginPath();
+            //     ctx.arc(cx, cy, r, 0, 2 * Math.PI);
+            //     ctx.stroke();
+            // }
+            // ctx.globalAlpha = 1;
+
+            // Twinkling stars
+            ctx.fillStyle = 'white';
+            stars.forEach(star => {
+                let radius = 1 + 0.5 * Math.sin(star.phase + time * star.frequency);
+                ctx.beginPath();
+                ctx.arc(star.x, star.y, radius, 0, 2 * Math.PI);
+                ctx.fill();
+            });
+
+            // Update and draw asteroids
+            asteroids.forEach(asteroid => {
+                let dx = cx - asteroid.x;
+                let dy = cy - asteroid.y;
+                let r = Math.sqrt(dx * dx + dy * dy);
+                if (r > 0) {
+                    let a = k / (r * r);
+                    asteroid.vx += a * (dx / r);
+                    asteroid.vy += a * (dy / r);
+                }
+                asteroid.x += asteroid.vx;
+                asteroid.y += asteroid.vy;
+            });
+
+            asteroids = asteroids.filter(asteroid => {
+                let dx = cx - asteroid.x;
+                let dy = cy - asteroid.y;
+                return Math.sqrt(dx * dx + dy * dy) > bh_radius;
+            });
+
+            asteroids.forEach(asteroid => {
+                let dx = cx - asteroid.x;
+                let dy = cy - asteroid.y;
+                let distance = Math.sqrt(dx * dx + dy * dy);
+                let scale = distance <= bh_radius ? 0 : distance < 2 * bh_radius ? (distance - bh_radius) / bh_radius : 1;
+                if (scale > 0) {
+                    let scaledPoints = asteroid.shape.map(p => ({
+                        x: asteroid.x + p.x * scale,
+                        y: asteroid.y + p.y * scale
+                    }));
+                    ctx.beginPath();
+                    ctx.moveTo(scaledPoints[0].x, scaledPoints[0].y);
+                    for (let i = 1; i < scaledPoints.length; i++) {
+                        ctx.lineTo(scaledPoints[i].x, scaledPoints[i].y);
+                    }
+                    ctx.closePath();
+                    ctx.fillStyle = 'gray';
+                    ctx.fill();
+                }
+            });
+
+            requestAnimationFrame(animate);
+        }
+
+        animate();
+
+        // Add asteroid on click
+        canvas.addEventListener('click', (event) => {
+            let rect = canvas.getBoundingClientRect();
+            let x = event.clientX - rect.left;
+            let y = event.clientY - rect.top;
+            asteroids.push({
+                x: x,
+                y: y,
+                vx: 0,
+                vy: 0,
+                shape: generateAsteroidShape(6, 5, 10)
+            });
+        });
+    </script>
+</body>
+</html>
