gonna add stuff later

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 </head>
 <body>
     <canvas id="myCanvas"></canvas>
-    <div id="infoText">Zoomed into the black hole.<br>Press Esc to return.</div>
+    <div id="infoText">Content coming shortly.<br>Press Esc to return.</div>
     <button id="enterButton">Enter</button>
     <script>
         const canvas = document.getElementById('myCanvas');
