--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 Henry Houghton
 LectureLink
 April 19, 2025
+#104F00, #001CAF
 -->
 
 <!DOCTYPE html>
@@ -10,6 +11,7 @@ April 19, 2025
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>LectureLink</title>
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
   <style>
     html, body {
       margin: 0;
@@ -18,37 +20,75 @@ April 19, 2025
     }
     body {
       display: flex;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
       background: linear-gradient(to bottom right, #104F00, #001CAF);
       font-family: Arial, sans-serif;
       position: relative;
-    }
-    h1 {
       color: white;
-      font-size: 5rem;
-      font-weight: bolder;
-      margin: 0;
+      text-align: center;
     }
-    nav {
+    .topbar {
       position: absolute;
       top: 20px;
+      left: 20px;
       right: 20px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    .logo {
+      height: 60px;
+      width: auto;
+      border-radius: 10px;
     }
     nav a {
       color: white;
       text-decoration: none;
       margin-left: 20px;
+      font-size: medium;
       font-weight: bold;
+      position: relative;
+      display: inline-block;
+      padding-bottom: 4px;
+    }
+    nav a::before {
+      content: '';
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 0;
+      height: 2px;
+      background-color: #ffffff;
+      transition: width 0.3s ease;
+    }
+    nav a:hover::before {
+      width: 100%;
+    }
+    h1 {
+      font-weight: 900;
+      font-size: clamp(2.5rem, 10vw, 6rem);
+      margin: 0;
+      line-height: 1;
+    }
+    h2, h3 {
+      font-size: clamp(1rem, 5vw, 2rem);
+      margin-top: 0.5rem;
+      font-weight: 600;
     }
   </style>
 </head>
 <body>
-  <nav>
-    <a href="privacy-policy.html">Privacy Policy</a>
-    <a href="terms-of-service.html">Terms of Service</a>
-    <a href="team.html">Team</a>
-  </nav>
+  <div class="topbar">
+    <img src="logo.png" alt="Logo" class="logo">
+    <nav>
+      <a href="privacy-policy.html">Privacy Policy</a>
+      <a href="terms-of-service.html">Terms of Service</a>
+      <a href="team.html">Team</a>
+    </nav>
+  </div>
   <h1>LectureLink</h1>
+  <h3>Coming soon to the App Store.</h3>
 </body>
 </html>
