fixed minor bugs

--- a/index.html
+++ b/index.html
@@ -81,9 +81,7 @@ April 19, 2025
 </head>
 <body>
   <div class="topbar">
-    <a href="index.html" class="logo-link">
-      <img src="logo.png" alt="Logo">
-    </a>
+    <img src="logo.png" alt="Logo" class="logo">
     <nav>
       <a href="privacy.html">Privacy Policy</a>
       <a href="terms.html">Terms of Service</a>
