--- a/terms.html
+++ b/terms.html
@@ -84,8 +84,8 @@
       <img src="logo.png" alt="Logo">
     </a>
     <nav>
-      <a href="privacy-policy.html">Privacy Policy</a>
-      <a href="terms-of-service.html">Terms of Service</a>
+      <a href="privacy.html">Privacy Policy</a>
+      <a href="terms.html">Terms of Service</a>
       <a href="mailto:lecturelinkteam@gmail.com">Contact Us</a>
     </nav>
   </div>
