color scheme change

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ April 19, 2025
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      background: linear-gradient(to bottom right, #104F00, #001CAF);
+      background: linear-gradient(to bottom right, #2b2b2b, #411111);
       font-family: Arial, sans-serif;
       position: relative;
       color: white;
