--- a/privacy.html
+++ b/privacy.html
@@ -14,7 +14,7 @@
     body {
       display: flex;
       flex-direction: column;
-      background: linear-gradient(to bottom right, #104F00, #001CAF);
+      background: linear-gradient(to bottom right, #2b2b2b, #411111);
       font-family: Arial, sans-serif;
       position: relative;
       color: white;
