update since now app is on app store. added tag line

--- a/index.html
+++ b/index.html
@@ -89,6 +89,10 @@ April 19, 2025
     </nav>
   </div>
   <h1>LectureLink</h1>
-  <h3>Coming soon to the App Store.</h3>
+  <h4><i>Study smarter, together</i></h4>
+</br></br>
+  <a href="https://apps.apple.com/us/app/lecturelink/id6744894821">
+    <img src="onappstore.png" alt="LectureLink is now on the App Store." style="width:250px;height:74px;">
+  </a>
 </body>
 </html>
