--- a/index.html
+++ b/index.html
@@ -1,10 +1,3 @@
-<!--
-Henry Houghton
-LectureLink
-April 19, 2025
-#104F00, #001CAF
--->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,6 +5,7 @@ April 19, 2025
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>LectureLink</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
   <style>
     html, body {
       margin: 0;
@@ -23,7 +17,7 @@ April 19, 2025
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      background: linear-gradient(to bottom right, #2b2b2b, #411111);
+      background: linear-gradient(to bottom right, #000000, #411111);
       font-family: Arial, sans-serif;
       position: relative;
       color: white;
@@ -43,12 +37,15 @@ April 19, 2025
       width: auto;
       border-radius: 10px;
     }
+    nav {
+      display: flex;
+      align-items: center;
+    }
     nav a {
       color: white;
       text-decoration: none;
-      margin-left: 20px;
+      margin: 20px;
       font-size: medium;
-      font-weight: bold;
       position: relative;
       display: inline-block;
       padding-bottom: 4px;
@@ -66,16 +63,57 @@ April 19, 2025
     nav a:hover::before {
       width: 100%;
     }
+    nav .separator {
+      color: white;
+      margin: 0 10px;
+      font-size: medium;
+    }
     h1 {
       font-weight: 900;
       font-size: clamp(2.5rem, 10vw, 6rem);
       margin: 0;
       line-height: 1;
     }
-    h2, h3 {
-      font-size: clamp(1rem, 5vw, 2rem);
-      margin-top: 0.5rem;
-      font-weight: 600;
+    h1 .letter, h4 .letter {
+      display: inline-block;
+      opacity: 0;
+      white-space: pre; /* Preserve spaces in text */
+    }
+    .app-store-container {
+      position: relative;
+      display: inline-block;
+      padding: 4px; /* Space for the glowing border */
+    }
+    .app-store-container::before {
+      content: '';
+      position: absolute;
+      top: -1px;
+      left: -1px;
+      right: -1px;
+      bottom: -1px;
+      border-radius: 12px; /* Slightly larger than image border-radius */
+      background: linear-gradient(45deg, #ff0000, #00ff00, #0000ff, #ff00ff);
+      background-size: 400%;
+      animation: glowingBorder 10s linear infinite;
+      z-index: -1; /* Place behind the image */
+      filter: blur(8px); /* Create the glow effect */
+    }
+    @keyframes glowingBorder {
+      0% {
+        background-position: 0% 50%;
+      }
+      50% {
+        background-position: 400% 50%;
+      }
+      100% {
+        background-position: 0% 50%;
+      }
+    }
+    .app-store-img {
+      display: block;
+      width: 250px;
+      height: 74px;
+      border-radius: 8px; /* Match or adjust to image's natural border */
     }
   </style>
 </head>
@@ -83,16 +121,41 @@ April 19, 2025
   <div class="topbar">
     <img src="logo.png" alt="Logo" class="logo">
     <nav>
+      <a href="team.html">Team</a>
+      <span class="separator">|</span>
       <a href="privacy.html">Privacy Policy</a>
+      <span class="separator">|</span>
       <a href="terms.html">Terms of Service</a>
-      <a href="mailto:lecturelinkteam@gmail.com">Contact Us</a>
+      <span class="separator">|</span>
+      <a href="join.html">Join Us</a>
     </nav>
   </div>
-  <h1>LectureLink</h1>
-  <h4><i>Study smarter, together</i></h4>
-</br></br>
-  <a href="https://apps.apple.com/us/app/lecturelink/id6744894821">
-    <img src="onappstore.png" alt="LectureLink is now on the App Store." style="width:250px;height:74px;">
+  <h1 id="lectureLinkTitle">L<span class="letter">e</span><span class="letter">c</span><span class="letter">t</span><span class="letter">u</span><span class="letter">r</span><span class="letter">e</span><span class="letter">L</span><span class="letter">i</span><span class="letter">n</span><span class="letter">k</span></h1>
+  <h4 id="tagline"><i><span class="letter">S</span><span class="letter">t</span><span class="letter">u</span><span class="letter">d</span><span class="letter">y</span><span class="letter"> </span><span class="letter">s</span><span class="letter">m</span><span class="letter">a</span><span class="letter">r</span><span class="letter">t</span><span class="letter">e</span><span class="letter">r</span><span class="letter">,</span><span class="letter"> </span><span class="letter">t</span><span class="letter">o</span><span class="letter">g</span><span class="letter">e</span><span class="letter">t</span><span class="letter">h</span><span class="letter">e</span><span class="letter">r</span></i></h4>
+  <br><br>
+  <a href="https://apps.apple.com/us/app/lecturelink/id6744894821" class="app-store-container">
+    <img src="onappstore.png" alt="LectureLink is now on the App Store." class="app-store-img">
   </a>
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      anime.timeline({
+        easing: 'easeOutExpo'
+      })
+      .add({
+        targets: '#lectureLinkTitle .letter',
+        opacity: [0, 1],
+        translateY: [-30, 0],
+        duration: 800,
+        delay: (el, i) => 200 * i
+      })
+      .add({
+        targets: '#tagline .letter',
+        opacity: [0, 1],
+        translateY: [-30, 0],
+        duration: 800,
+        delay: (el, i) => 10 * i
+      }, '-=500'); // Start tagline animation 200ms before title animation ends
+    });
+  </script>
 </body>
 </html>
