--- a/join.html
+++ b/join.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Terms of Service</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <style>
-    html,
-    body {
+    html, body {
       margin: 0;
       padding: 0;
       height: 100%;
     }
-
     body {
       display: flex;
       flex-direction: column;
@@ -22,7 +19,6 @@
       position: relative;
       color: white;
     }
-
     .topbar {
       position: absolute;
       top: 20px;
@@ -32,17 +28,14 @@
       justify-content: space-between;
       align-items: center;
     }
-
     .logo-link {
       display: inline-block;
     }
-
     .logo-link img {
       height: 60px;
       width: auto;
       border-radius: 10px;
     }
-
     nav a {
       color: white;
       text-decoration: none;
@@ -52,7 +45,6 @@
       display: inline-block;
       padding-bottom: 4px;
     }
-
     nav a::before {
       content: '';
       position: absolute;
@@ -63,11 +55,9 @@
       background-color: #ffffff;
       transition: width 0.3s ease;
     }
-
     nav a:hover::before {
       width: 100%;
     }
-
     .content {
       flex: 1;
       display: flex;
@@ -76,13 +66,11 @@
       padding: 20px;
       margin-top: 100px;
     }
-
     .pdf-container {
       width: 100%;
       height: 100%;
       max-height: calc(100vh - 140px);
     }
-
     .pdf-container embed {
       width: 100%;
       height: 100%;
@@ -90,25 +78,23 @@
     }
   </style>
 </head>
-
 <body>
   <div class="topbar">
     <a href="index.html" class="logo-link">
       <img src="logo.png" alt="Logo">
     </a>
     <nav>
-      <a href="team.html">Team</a>
-      <a href="privacy.html">Privacy Policy</a>
-      <a href="terms.html">Terms of Service</a>
-      <a href="join.html">Join Us</a>
-    </nav>
+        <a href="team.html">Team</a>
+        <a href="privacy.html">Privacy Policy</a>
+        <a href="terms.html">Terms of Service</a>
+        <a href="join.html">Join Us</a>
+      </nav>
   </div>
 
   <div class="content">
     <div class="pdf-container">
-      <embed src="LectureLinkTermsAndConditionsOfService.pdf" type="application/pdf">
+      <embed src="LectureLinkPrivacyPolicy.pdf" type="application/pdf">
     </div>
   </div>
 </body>
-
 </html>
