--- a/privacy.html
+++ b/privacy.html
@@ -14,7 +14,7 @@
     body {
       display: flex;
       flex-direction: column;
-      background: linear-gradient(to bottom right, #2b2b2b, #411111);
+      background: linear-gradient(to bottom right, #000000, #411111);
       font-family: Arial, sans-serif;
       position: relative;
       color: white;
@@ -84,9 +84,10 @@
       <img src="logo.png" alt="Logo">
     </a>
     <nav>
+      <a href="team.html">Team</a>
       <a href="privacy.html">Privacy Policy</a>
       <a href="terms.html">Terms of Service</a>
-      <a href="mailto:lecturelinkteam@gmail.com">Contact Us</a>
+      <a href="join.html">Join Us</a>
     </nav>
   </div>
 
